--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,21 @@
  * limitations under the License.
  */
 
+apply plugin: 'io.github.rockerhieu.versionberg'
 apply plugin: 'com.android.application'
+
+versionberg {
+    major 1
+    minor 0
+//    patch 0
+//    build 2
+
+    // Default version name template is '${major}.${minor}.${patch}.${build}'
+//    nameTemplate '${major}.${minor}.${new Date().format("ddMMyyyy")}-SNAPSHOT'
+
+    // Default version code template is '${build}'
+//    codeTemplate '(((${major} * 100) + ${minor}) * 100) * 100000 + ${build}'
+}
 
 android {
     compileSdkVersion 28
@@ -23,7 +37,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName versionberg.name
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,15 +45,19 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
+        }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
 }
