--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        
+        classpath 'io.github.rockerhieu:versionberg:1.0.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -34,7 +34,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
+
     }
 }
 
